src/objects/Quick_Links__mdt.object
<CustomObject>
    <description>Used to store the links to external applications - used in the service console for lightning</description>
    <fields>
        <fullName>Link_URL__c</fullName>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Open_in__c</fullName>
        <label>Open in</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Console Sub Tab</fullName>
                    <default>true</default>
                    <label>Console Sub Tab</label>
                </value>
                <value>
                    <fullName>Browser Tab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TANDEM</fullName>
                    <default>true</default>
                    <label>TANDEM</label>
                </value>
                <value>
                    <fullName>SIEBEL</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Query_Parameter__c</fullName>
        <label>Query Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Quick Links</label>
    <pluralLabel>Quick Links</pluralLabel>
</CustomObject>